# bazel_demo

./: BUILD  BUILD.bazel  WORKSPACE  go.mod  makefile
cmd/book/: BUILD.bazel  main.go
internal/repository/: BUILD.bazel  repository.go
internal/service/: BUILD.bazel  service.go
