load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "book_lib",
    srcs = ["main.go"],
    importpath = "github.com/TomL-dev/bazel_demo/cmd/book",
    visibility = ["//visibility:private"],
    deps = ["//internal/service"],
)

go_binary(
    name = "book",
    embed = [":book_lib"],
    visibility = ["//visibility:public"],
)
